--- a/styles/index.css
+++ b/styles/index.css
@@ -309,6 +309,7 @@ header .value p {
 
 .best-selling-product .card img {
   width: 223px;
+  max-width: 100%;
   height: 250px;
   margin-top: -60px;
 }
@@ -773,6 +774,11 @@ footer .second-line ul a {
     gap: 32px;
   }
 
+  .materials .big {
+    max-width: 100%;
+    height: auto;
+  }
+
   .experiences {
     width: 90%;
     margin: 0 auto;
@@ -812,6 +818,11 @@ footer .second-line ul a {
   .choosing-us-container .cards,
   .best-selling-product .cards-products {
     grid-template-columns: 1fr;
+  }
+
+  .best-selling-product .card,
+  .best-selling-product .card img {
+    width: 100%;
   }
 
   .experiences img {
